--- a/styles.css
+++ b/styles.css
@@ -151,14 +151,14 @@ body {
 }
 
 /* hero section */
-.hero {
+/* .hero {
   background-image: url(assets/imgs/PPE.jpg);
   background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   color: #fff;
-}
+} */
 .hero__headline {
   font-size: clamp(1.5rem, 0.75rem + 1vw, 2rem);
 }
